--- a/css/1-col-portfolio.css
+++ b/css/1-col-portfolio.css
@@ -1,5 +1,5 @@
 /*!
- * Start Bootstrap - Blog Home HTML Template (http://startbootstrap.com)
+ * Start Bootstrap - 1 Col Portfolio HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
